k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    paths:
      - path: /(.*)
        backend: 
          serviceName: client-cluster-ip-service
          servicePort: 3000
      - path: /app/(.*)
        backend:
          serviceName: server-cluster-ip-service
          servicePort: 5000
